--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  box-sizing: border-box;
+  font-family: "Montserrat", Arial, sans-serif;
+  font-size: 1em;
+  line-height: 1.3;
+}
+
+*,
+::before,
+::after {
+  box-sizing: inherit;
+  margin: 0;
+}
