--- a/src/app/components/users-table/users-table.component.html
+++ b/src/app/components/users-table/users-table.component.html
@@ -1,41 +1,11 @@
 <kendo-grid
-  [data]="users"
+  [data]="usersForRender"
   scrollable="none"
   (cellClick)="handleKendoCellClick($event)"
   (dblclick)="handleKendoGridDoubleClick()"
 >
-  <kendo-grid-column
-    title="Name"
-    [headerClass]="headerCellClass"
-    [class]="bodyCellClass"
-  >
-    <ng-template kendoGridCellTemplate let-user>
-      {{ user.firstName }} {{ user.lastName }}
-    </ng-template>
-  </kendo-grid-column>
-
-  <kendo-grid-column
-    field="email"
-    title="Email"
-    [headerClass]="headerCellClass"
-    [class]="bodyCellClass"
-  ></kendo-grid-column>
-
-  <kendo-grid-column
-    title="Address"
-    [headerClass]="headerCellClass"
-    [class]="bodyCellClass"
-  >
-    <ng-template kendoGridCellTemplate let-user>
-      {{ user.address.zipcode }}, {{ user.address.city }},
-      {{ user.address.street }}, {{ user.address.building }}
-    </ng-template>
-  </kendo-grid-column>
-
-  <kendo-grid-column
-    field="phone"
-    title="Phone"
-    [headerClass]="headerCellClass"
-    [class]="bodyCellClass"
-  ></kendo-grid-column>
+  <kendo-grid-column title="Name" field="name"> </kendo-grid-column>
+  <kendo-grid-column field="email" title="Email"></kendo-grid-column>
+  <kendo-grid-column title="Address" field="address"> </kendo-grid-column>
+  <kendo-grid-column field="phone" title="Phone"></kendo-grid-column>
 </kendo-grid>
