--- a/src/app/components/user-form/user-form.component.html
+++ b/src/app/components/user-form/user-form.component.html
@@ -1,6 +1,6 @@
 <p>user-form works!</p>
-<form [formGroup]="form">
-  <kendo-form-field>
+<form class="user-form" [formGroup]="form" (ngSubmit)="handleFormSubmit()">
+  <kendo-formfield class="user-form__user-name user-form__item">
     <kendo-label class="user-form__label" [for]="userName" text="User name">
       <span class="user-form__required">&nbsp;*</span>
     </kendo-label>
@@ -13,5 +13,69 @@
       showErrorIcon="initial"
       #userName
     ></kendo-textbox>
-  </kendo-form-field>
+  </kendo-formfield>
+
+  <kendo-formfield class="user-form__first-name user-form__item">
+    <kendo-label class="user-form__label" [for]="firstName" text="First name">
+      <span class="user-form__required">&nbsp;*</span>
+    </kendo-label>
+
+    <kendo-textbox
+      class="user-form__control user-form__control--first-name"
+      formControlName="firstName"
+      placeholder="First Name"
+      showSuccessIcon="initial"
+      showErrorIcon="initial"
+      #firstName
+    ></kendo-textbox>
+  </kendo-formfield>
+
+  <kendo-formfield class="user-form__last-name user-form__item">
+    <kendo-label class="user-form__label" [for]="lastName" text="Last name">
+      <span class="user-form__required">&nbsp;*</span>
+    </kendo-label>
+
+    <kendo-textbox
+      class="user-form__control user-form__control--last-name"
+      formControlName="lastName"
+      placeholder="Last Name"
+      showSuccessIcon="initial"
+      showErrorIcon="initial"
+      #lastName
+    ></kendo-textbox>
+  </kendo-formfield>
+
+  <kendo-formfield class="user-form__email user-form__item">
+    <kendo-label class="user-form__label" [for]="email" text="Email">
+      <span class="user-form__required">&nbsp;*</span>
+    </kendo-label>
+
+    <kendo-textbox
+      class="user-form__control user-form__control--email"
+      formControlName="email"
+      placeholder="Email"
+      showSuccessIcon="initial"
+      showErrorIcon="initial"
+      #email
+    ></kendo-textbox>
+  </kendo-formfield>
+
+  <div class="user-form__address user-form__item" formGroupName="address">
+    <kendo-formfield class="user-form__street user-form__item">
+      <kendo-label class="user-form__label" [for]="street" text="Street">
+        <span class="user-form__required">&nbsp;*</span>
+      </kendo-label>
+
+      <kendo-textbox
+        class="user-form__control user-form__control--street"
+        formControlName="street"
+        placeholder="Street"
+        showSuccessIcon="initial"
+        showErrorIcon="initial"
+        #street
+      ></kendo-textbox>
+    </kendo-formfield>
+  </div>
+
+  <div class="user-form__actions"></div>
 </form>
