--- a/src/app/components/user-form/user-form.component.css
+++ b/src/app/components/user-form/user-form.component.css
@@ -25,8 +25,9 @@
   display: flex;
   justify-content: flex-start;
   padding-top: 15px;
+  margin: -5px;
 }
 
 .user-form__button {
-  margin-right: 10px;
+  margin: 5px;
 }
