--- a/src/app/components/user-form/user-form.component.html
+++ b/src/app/components/user-form/user-form.component.html
@@ -1,4 +1,3 @@
-<p>user-form works!</p>
 <form class="user-form" [formGroup]="form" (ngSubmit)="handleFormSubmit()">
   <kendo-formfield class="user-form__user-name user-form__item">
     <kendo-label class="user-form__label" [for]="userName" text="User name">
@@ -75,7 +74,129 @@
         #street
       ></kendo-textbox>
     </kendo-formfield>
+
+    <kendo-formfield class="user-form__building user-form__item">
+      <kendo-label class="user-form__label" [for]="building" text="Building">
+        <span class="user-form__required">&nbsp;*</span>
+      </kendo-label>
+
+      <kendo-textbox
+        class="user-form__control user-form__control--building"
+        formControlName="building"
+        placeholder="Building"
+        showSuccessIcon="initial"
+        showErrorIcon="initial"
+        #building
+      ></kendo-textbox>
+    </kendo-formfield>
+
+    <kendo-formfield class="user-form__city user-form__item">
+      <kendo-label class="user-form__label" [for]="city" text="City">
+        <span class="user-form__required">&nbsp;*</span>
+      </kendo-label>
+
+      <kendo-textbox
+        class="user-form__control user-form__control--city"
+        formControlName="city"
+        placeholder="City"
+        showSuccessIcon="initial"
+        showErrorIcon="initial"
+        #city
+      ></kendo-textbox>
+    </kendo-formfield>
+
+    <kendo-formfield class="user-form__zipcode user-form__item">
+      <kendo-label class="user-form__label" [for]="zipcode" text="Zipcode">
+        <span class="user-form__required">&nbsp;*</span>
+      </kendo-label>
+
+      <kendo-textbox
+        class="user-form__control user-form__control--zipcode"
+        formControlName="zipcode"
+        placeholder="Zipcode"
+        showSuccessIcon="initial"
+        showErrorIcon="initial"
+        #zipcode
+      ></kendo-textbox>
+    </kendo-formfield>
   </div>
 
-  <div class="user-form__actions"></div>
+  <kendo-formfield class="user-form__phone user-form__item">
+    <kendo-label class="user-form__label" [for]="phone" text="Phone">
+      <span class="user-form__required">&nbsp;*</span>
+    </kendo-label>
+
+    <kendo-maskedtextbox
+      class="user-form__control user-form__control--phone"
+      formControlName="phone"
+      [mask]="phoneFormControlMask"
+      #phone
+    ></kendo-maskedtextbox>
+  </kendo-formfield>
+
+  <kendo-formfield class="user-form__website user-form__item">
+    <kendo-label class="user-form__label" [for]="website" text="Website">
+      <span class="user-form__required">&nbsp;*</span>
+    </kendo-label>
+
+    <kendo-textbox
+      class="user-form__control user-form__control--website"
+      formControlName="website"
+      placeholder="Website"
+      showSuccessIcon="initial"
+      showErrorIcon="initial"
+      #website
+    ></kendo-textbox>
+  </kendo-formfield>
+
+  <div class="user-form__company user-form__item" formGroupName="company">
+    <kendo-formfield class="user-form__company-name user-form__item">
+      <kendo-label class="user-form__label" [for]="name" text="Company name">
+        <span class="user-form__required">&nbsp;*</span>
+      </kendo-label>
+
+      <kendo-textbox
+        class="user-form__control user-form__control--company-name"
+        formControlName="name"
+        placeholder="Company name"
+        showSuccessIcon="initial"
+        showErrorIcon="initial"
+        #name
+      ></kendo-textbox>
+    </kendo-formfield>
+
+    <kendo-formfield class="user-form__company-scope user-form__item">
+      <kendo-label class="user-form__label" [for]="scope" text="Company scope">
+        <span class="user-form__required">&nbsp;*</span>
+      </kendo-label>
+
+      <kendo-textbox
+        class="user-form__control user-form__control--company-scope"
+        formControlName="scope"
+        placeholder="Company scope"
+        showSuccessIcon="initial"
+        showErrorIcon="initial"
+        #scope
+      ></kendo-textbox>
+    </kendo-formfield>
+  </div>
+
+  <div class="user-form__actions">
+    <button
+      class="user-form__button"
+      kendoButton
+      type="submit"
+      [primary]="true"
+    >
+      Submit
+    </button>
+    <button
+      class="user-form__button"
+      kendoButton
+      type="button"
+      (click)="handleCancel($event)"
+    >
+      Cancel
+    </button>
+  </div>
 </form>
