--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,1 +1,8 @@
-<p>post works!</p>
+<div class="post">
+  <h3 class="post__title">
+    {{ post.title }}
+  </h3>
+  <div class="post__body">
+    {{ post.body }}
+  </div>
+</div>
