--- a/src/app/components/posts-list/posts-list.component.html
+++ b/src/app/components/posts-list/posts-list.component.html
@@ -1,1 +1,5 @@
-<p>posts-list works!</p>
+<ul class="posts-list">
+  <li class="posts-list__item" *ngFor="let post of posts">
+    <post [post]="post"></post>
+  </li>
+</ul>
