page-section component was implemented

--- a/src/app/components/user-posts/user-posts.component.html
+++ b/src/app/components/user-posts/user-posts.component.html
@@ -1,1 +1,3 @@
-<posts-list [posts]="posts" *ngIf="posts"></posts-list>
+<page-section [title]="'Posts'">
+  <posts-list [posts]="posts" *ngIf="posts"></posts-list>
+</page-section>
