--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -5,4 +5,8 @@
   <div class="post__body">
     {{ post.body }}
   </div>
+  <div class="post__actions">
+    <button class="post__button" kendoButton [primary]="true">Edit</button>
+    <button class="post__button" kendoButton>Remove</button>
+  </div>
 </div>
