Comments loading by post Id was implemented

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -29,4 +29,8 @@
       (onCancel)="handlePostFormCancel()"
     ></post-form>
   </div>
+
+  <div *ngIf="comments">
+    {{ comments | json }}
+  </div>
 </div>
