Was added styles for comments-list component

--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -3,7 +3,7 @@
     <strong>Comment ID:</strong> {{ comment.id }}
   </div>
   <div class="comment__field comment__field--post-id">
-    <strong>Post ID:</strong> {{ comment.id }}
+    <strong>Post ID:</strong> {{ comment.postId }}
   </div>
   <div class="comment__field comment__field--name">
     <strong>Name:</strong> {{ comment.name }}
