--- a/src/app/components/post/post.component.css
+++ b/src/app/components/post/post.component.css
@@ -30,12 +30,9 @@
   margin: 5px;
 }
 
-.post__comments {
-  padding-top: 25px;
-}
-
 .post__comments-actions {
   margin: 0 -5px;
+  padding: 15px 0 7px;
 }
 
 .post__comments-actions .post__button {
