--- a/src/app/components/post-form/post-form.component.html
+++ b/src/app/components/post-form/post-form.component.html
@@ -36,7 +36,7 @@
       kendoButton
       [primary]="true"
     >
-      Save changes
+      {{ submitButtonText }}
     </button>
     <button
       class="post-form__button"
