Tiny refactoring in post component

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -39,7 +39,7 @@
         kendoButton
         (click)="toggleCommentsVisibility()"
       >
-        {{ commentsTogglerText }}
+        {{ commentsVisibilityTogglerText }}
       </button>
     </div>
     <comments-list
