--- a/src/app/components/user-posts/user-posts.component.html
+++ b/src/app/components/user-posts/user-posts.component.html
@@ -1,4 +1,5 @@
 <page-section [title]="'Posts'">
+  <add-post></add-post>
   <ng-template [ngIf]="posts">
     <posts-list [posts]="posts" *ngIf="posts.length > 0"></posts-list>
     <message *ngIf="posts.length === 0">This user hasn't any posts...</message>
