--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -31,7 +31,7 @@
     ></post-form>
   </div>
 
-  <div class="post__comments" *ngIf="comments">
+  <div class="post__comments" *ngIf="comments && comments.length > 0">
     <div class="post__comments-actions" *ngIf="!isEditing">
       <button
         class="post__button"
