Closing modals after user adding or post adding was configured

--- a/src/app/components/user-form/user-form.component.html
+++ b/src/app/components/user-form/user-form.component.html
@@ -6,7 +6,7 @@
 
     <kendo-textbox
       class="user-form__control user-form__control--user-name"
-      formControlName="userName"
+      formControlName="username"
       placeholder="Enter Name"
       showSuccessIcon="initial"
       showErrorIcon="initial"
