--- a/src/app/pages/user-page/user-page.component.html
+++ b/src/app/pages/user-page/user-page.component.html
@@ -1,13 +1,15 @@
 <page [title]="user.username" *ngIf="user">
+  <user-info [user]="user"></user-info>
+
   <div class="user-page__actions">
-    <button
-      class="user-page__button"
-      kendoButton
-      [primary]="true"
-      (click)="goToUsersPage()"
-    >
-      All users
-    </button>
+    <div class="user-page__actions-item">
+      <button kendoButton [primary]="true" (click)="goToUsersPage()">
+        All users
+      </button>
+    </div>
+    <div class="user-page__actions-item">
+      <add-post [user]="user"></add-post>
+    </div>
   </div>
 
   <user-posts [user]="user"></user-posts>
