user form was configured for user adding and user editing

--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -1,1 +1,24 @@
-<p>edit-user works!</p>
+<div class="edit-user">
+  <div class="edit-user__actions">
+    <button type="button" kendoButton [primary]="true" (click)="showModal()">
+      Edit user info
+    </button>
+  </div>
+
+  <kendo-dialog
+    class="edit-user__dialog"
+    *ngIf="isModalVisible"
+    [title]="modalTitle"
+    [minWidth]="modalMinWidth"
+    [width]="modalWidth"
+    (close)="closeModal()"
+  >
+    <user-form
+      class="edit-user__form"
+      [user]="user"
+      [submitButtonText]="'Edit user'"
+      (onSubmit)="handleFormSubmit($event)"
+      (onCancel)="closeModal()"
+    ></user-form>
+  </kendo-dialog>
+</div>
