--- a/src/app/pages/user-page/user-page.component.html
+++ b/src/app/pages/user-page/user-page.component.html
@@ -10,6 +10,9 @@
     <div class="user-page__actions-item">
       <add-post [user]="user"></add-post>
     </div>
+    <div class="user-page__actions-item">
+      <edit-user [user]="user"></edit-user>
+    </div>
   </div>
 
   <user-posts [user]="user"></user-posts>
