User editing was implemented

--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -16,7 +16,7 @@
     <user-form
       class="edit-user__form"
       [user]="user"
-      [submitButtonText]="'Edit user'"
+      [submitButtonText]="'Save changes'"
       (onSubmit)="handleFormSubmit($event)"
       (onCancel)="closeModal()"
     ></user-form>
