Refactored add-user component. Some changes in add-post and user-form components

--- a/src/app/components/add-post/add-post.component.html
+++ b/src/app/components/add-post/add-post.component.html
@@ -12,7 +12,7 @@
   </div>
 
   <kendo-dialog
-    class="add-post__dialog"
+    class="add-post__modal"
     *ngIf="isModalVisible"
     [title]="modalTitle"
     [minWidth]="modalMinWidth"
