--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -10,7 +10,7 @@
 </div>
 
 <kendo-dialog
-  class="add-user__dialog"
+  class="add-user__modal"
   *ngIf="isModalVisible"
   [title]="modalTitle"
   [minWidth]="modalMinWidth"
