--- a/src/app/pages/user-page/user-page.component.html
+++ b/src/app/pages/user-page/user-page.component.html
@@ -1,4 +1,4 @@
-<page [title]="user.username" *ngIf="user">
+<page [title]="pageTitle" *ngIf="user">
   <user-info [user]="user"></user-info>
 
   <div class="user-page__actions">
