edit-post component was implemented. post-form and post components was refactored

--- a/src/app/components/forms/post-form/post-form.component.html
+++ b/src/app/components/forms/post-form/post-form.component.html
@@ -42,7 +42,7 @@
       class="post-form__button"
       type="button"
       kendoButton
-      (click)="handleFormCancel($event)"
+      (click)="handleFormCancel()"
     >
       Cancel
     </button>
