user-form component refactored

--- a/src/app/components/forms/user-form/user-form.component.html
+++ b/src/app/components/forms/user-form/user-form.component.html
@@ -200,7 +200,7 @@
       class="user-form__button"
       kendoButton
       type="button"
-      (click)="handleCancel($event)"
+      (click)="handleCancel()"
     >
       {{ cancelButtonText }}
     </button>
