loader component was completed

--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -1,1 +1,16 @@
-<p>loader works!</p>
+<div class="loader loadingio-spinner-spinner-666ap5a3qrl">
+  <div class="loader__spinner ldio-0odd6lam5zai">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+</div>
