--- a/src/app/components/loader/loader.component.css
+++ b/src/app/components/loader/loader.component.css
@@ -15,7 +15,7 @@
   height: 100%;
   justify-content: center;
   left: 0;
-  position: fixed;
+  position: absolute;
   right: 0;
   top: 0;
   width: 100%;
