--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -1,16 +1,7 @@
-<div class="loader loadingio-spinner-spinner-666ap5a3qrl">
-  <div class="loader__spinner ldio-0odd6lam5zai">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+<div class="loader">
+  <kendo-loader type="infinite-spinner" themeColor="primary" size="large">
+  </kendo-loader>
+  <div class="loader__text">
+    <ng-content></ng-content>
   </div>
 </div>
